fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -51,14 +51,14 @@
     border: none;
     transition: .2s;
     width: 100% !important;
-    height: 36px !important;
-    height: 36px !important;
     display: table !important;
     border-radius: 4px !important;
     font-size: 14px!important;
 }
 
-
+.content-parent-div {
+    background-color: white;
+}
 
 .submitButton {
     background-color: #5fcf80;
@@ -122,14 +122,14 @@
     height: 100%;
     font-size: 14px;
     font-family: "Open Sans";
-    border-radius: 10px;
+    border-radius: 4px;
     font-weight: 700;
 }
 .inputContainers {
     /*background-color: rgba(255,255,255,0.2);*/
     background-color: rgba(255,255,255,0.5);
     padding: 12px 11px 0;
-    border-radius: 10px;
+    border-radius: 4px;
     text-align: left;
     font-family: 'Open Sans'!important;
     box-shadow: 0 16px 40px rgba(0,0,0,0.06) !important;
@@ -203,6 +203,11 @@ td {
 .mapsfix {
     padding: 0px!important;
 }
+
+.marginRowFix {
+    margin: 0px!important;;
+}
+
 table {
     margin-top: 25px;
     /* word-break: break-all; */
@@ -549,6 +554,11 @@ button.close {
     border: 10px;
     font-size: 12px;
     padding-bottom: 2em;
+    background-color: white;
+}
+
+.toolbar {
+    padding: 0px!important;
 }
 
 .apidata {
@@ -827,7 +837,7 @@ header::before {
     top: 0;
     left: 0;
     width: 100%;
-    height: 500px;
+    height: 100%;
     z-index: -2;
     opacity: 1.6;
 }
@@ -912,4 +922,33 @@ input:-webkit-autofill:active {
 
 .mb-2 {
     margin-bottom: 0px!important;
+}
+
+.mapAndResultsDiv {
+    position: fixed;
+    top: 500px;
+    width: calc(100% / 3);
+}
+
+.wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.main {
+    width: calc(100%/ (7/12));
+    height: 100vh;
+}
+
+.sidebar {
+    width: calc(100%/ (5/12));
+    height: 50vh;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+}
+
+.mapAndResults {
+    height: 100vh;
+    overflow-y: auto;
 }
